--- a/TodoList/appsettings.Development.json
+++ b/TodoList/appsettings.Development.json
@@ -1,8 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "DevConnection": "Data Source = C:\\SqliteDatabases\\todo.db"
   }
 }
